--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 14.255</font>)</em>, 2023
               <br>
-              <a href="">Paper</a>
+              <a href="https://ieeexplore.ieee.org/abstract/document/10163985">Paper</a>
               /
               <a href="https://github.com/yueliu1999/SCGC">Code</a>
               <p></p>
@@ -226,7 +226,7 @@
               <br>
               <em>AAAI (<font color="red">CCF-A, Oral presentation</font>)</em>, 2023
               <br>
-              <a href="https://arxiv.org/abs/2212.08665">Paper</a>
+              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26071">Paper</a>
               /
               <a href="https://github.com/yueliu1999/HSAN">Code</a>
               <p></p>
@@ -259,7 +259,7 @@
               <br>
               <em>AAAI (<font color="red">CCF-A</font>)</em>, 2023
               <br>
-              <a href="https://arxiv.org/abs/2212.08665">Paper</a>
+              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26333">Paper</a>
               /
               <a href="https://github.com/yueliu1999/HSAN">Code</a>
               <p></p>
