--- a/index.html
+++ b/index.html
@@ -335,6 +335,33 @@
             </td>
           </tr>
 <!--------------------------------------------------------------------------------------------------------------------------->
+            <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/TFMKC.png' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>TFMKC: Tuning-free Multiple Kernel Clustering Coupled with Diverse Partition Fusion</papertitle>
+              </a>
+              <br>
+              <a href="https://junpuzhang.github.io/">Junpu Zhang</a>,
+	      <strong>Liang Li(Co-first author)</strong>,
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <br>
+              <em>Preprint </em>, 2023
+              <br>
+              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              /
+              <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
+              <p></p>
+              <p style="text-align:justify">
+                We propose an elegant diverse kernel partition fusion method to get the optimal partition.
+              </p>
+            </td>
+          </tr>
+<!--------------------------------------------------------------------------------------------------------------------------->
 
 <!--Service-->
         </tbody></table>
