--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/TFMKC.png' width="160">
+                <img src='images/TFMKC.PNG' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -348,7 +348,7 @@
               <br>
               <a href="https://junpuzhang.github.io/">Junpu Zhang</a>,
 	      <strong>Liang Li(Co-first author)</strong>,
-              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>
               <br>
               <em>Preprint </em>, 2023
               <br>
