--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+		<li><b>[<font color="red">2024.01</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
               <li><b>[<font color="red">2023.07</font>]</b> I was awarded CSC Scholarship.</li>
               <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>
               <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
@@ -97,7 +98,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>Preprint </em>, 2023
+              <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2024
               <br>
               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
               /
@@ -156,7 +157,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>IEEE TKDE (<font color="red">CCF-A, IF: 9.235</font>)</em>, 2023
+              <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2023
               <br>
               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
               /
@@ -190,7 +191,7 @@
                 <strong>Liang Li</strong>,
 
               <br>
-              <em>IEEE TNNLS (<font color="red">CCF-B, IF: 14.255</font>)</em>, 2023
+              <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>)</em>, 2023
               <br>
               <a href="https://ieeexplore.ieee.org/abstract/document/10163985">Paper</a>
               /
@@ -323,7 +324,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>IEEE TNNLS (<font color="red">CCF-B, IF: 14.255</font>)</em>, 2022
+              <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>)</em>, 2022
               <br>
               <a href="https://ieeexplore.ieee.org/document/9830658/?denied=">Paper</a>
               /
