--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
             <li>Reviewer for TKDE, TNNLS, ACM TOMM</li>
-            <li>Reviewer for ACM MM23, AAAI24/23, PRCV22</li>
+            <li>Reviewer for ACM MM24/23, AAAI24/23, PRCV22</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
         </table>
