--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2023
               <br>
-              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              <a href="images/2023-TKDE">Paper</a>
               /
               <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
               <p></p>
@@ -255,7 +255,7 @@
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>)</em>, 2022
               <br>
-              <a href="https://ieeexplore.ieee.org/document/9830658/?denied=">Paper</a>
+              <a href="images/2022-TNNLS">Paper</a>
               /
               <a href="https://github.com/liliangnudt/LSWMKC">Code</a>
               <p></p>
