--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2023
               <br>
-              <a href="images/2023-TKDE">Paper</a>
+              <a href="images/2023-TKDE.pdf">Paper</a>
               /
               <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
               <p></p>
@@ -201,7 +201,6 @@
             </td>
           </tr>
 <!--------------------------------------------------------------------------------------------------------------------------->
-
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -223,7 +222,7 @@
               <br>
               <em>ACM MM (<font color="red">CCF-A</font>)</em>, 2022
               <br>
-              <a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548334?casa_token=g16Xqzve7TUAAAAA:I1pf0PdeSmTt7Eodutlf9srhRFkoIs4v0eezz-OQwZZHaBSPKC69bGnGyfLMCn_n6AAeE8jFUihjMdg">Paper</a>
+              <a href="2022-ACMMM.pdf">Paper</a>
               /
               <a href="https://github.com/liliangnudt/MKCDNM">Code</a>
               <p></p>
@@ -255,7 +254,7 @@
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>)</em>, 2022
               <br>
-              <a href="images/2022-TNNLS">Paper</a>
+              <a href="images/2022-TNNLS.pdf">Paper</a>
               /
               <a href="https://github.com/liliangnudt/LSWMKC">Code</a>
               <p></p>
