--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Liang Li</name>
+                <name>Li Liang</name>
               </p>
 
-              <p style="text-align:justify">Liang Li (李亮) is a Ph.D. student at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China since 2021. 
+              <p style="text-align:justify">Li Liang(李亮) is a Ph.D. student at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China since 2021. 
                 He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a> at Pattern Recognition & Machine Intelligence Lab (PRMI). 
 		Before that, he received the Master degree from NUDT in 2020, and got the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, unsupervised clustering, GNN, and self-supervised learning.
@@ -222,7 +222,7 @@
               <br>
               <em>ACM MM (<font color="red">CCF-A</font>)</em>, 2022
               <br>
-              <a href="2022-ACMMM.pdf">Paper</a>
+              <a href="images/2022-ACMMM.pdf">Paper</a>
               /
               <a href="https://github.com/liliangnudt/MKCDNM">Code</a>
               <p></p>
@@ -314,7 +314,7 @@
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>)</em>, 2023
               <br>
-              <a href="https://ieeexplore.ieee.org/abstract/document/10163985">Paper</a>
+              <a href="images/2023-Liuyue-TNNLS.pdf">Paper</a>
               /
               <a href="https://github.com/yueliu1999/SCGC">Code</a>
               <p></p>
@@ -349,7 +349,7 @@
               <br>
               <em>AAAI (<font color="red">CCF-A, Oral presentation</font>)</em>, 2023
               <br>
-              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26071">Paper</a>
+              <a href="images/2022-liuyue-AAAI.pdf">Paper</a>
               /
               <a href="https://github.com/yueliu1999/HSAN">Code</a>
               <p></p>
@@ -382,7 +382,7 @@
               <br>
               <em>AAAI (<font color="red">CCF-A</font>)</em>, 2023
               <br>
-              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26333">Paper</a>
+              <a href="images/2022-Zhangpei-AAAI.pdf">Paper</a>
               /
               <a href="https://github.com/yueliu1999/HSAN">Code</a>
               <p></p>
