--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
               <heading>News</heading>
               <ul>
 		<li><b>[<font color="red">2024.01</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
-              <li><b>[<font color="red">2023.07</font>]</b> I was awarded CSC Scholarship.</li>
-              <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>
-              <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
-              <li><b>[<font color="red">2022.11</font>]</b> Two papers have been accepted by <em>AAAI</em> 2023.</li>
-              <li><b>[<font color="red">2022.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>
-<!--               <li><b>[<font color="red">2022.09</font>]</b> I am visiting  <a href="https://en.westlake.edu.cn/">Westlake University</a>, working with <a href="https://junxia97.github.io/">Jun Xia</a>, supervised by Prof. <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ&hl=zh-CN&oi=ao">Stan Z. Li</a>.</li> -->
-              <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>ACMMM</em> 2022.</li>
-              <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>		      
-              <li><b>[<font color="red">2021.12</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>
-              <li><b>[<font color="red">2020.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>		    
-              <li><b>[<font color="red">2020.10</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>		      
+		<li><b>[<font color="red">2023.09</font>]</b> I am visiting A*STAR for 18 months.</li>
+		<li><b>[<font color="red">2023.07</font>]</b> I was awarded CSC Scholarship.</li>
+              	<li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>
+	      	<li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
+	      	<li><b>[<font color="red">2022.11</font>]</b> Two papers have been accepted by <em>AAAI</em> 2023.</li>
+	      	<li><b>[<font color="red">2022.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>
+	      	<li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>ACMMM</em> 2022.</li>
+	      	<li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>		      
+	      	<li><b>[<font color="red">2021.12</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>
+	      	<li><b>[<font color="red">2020.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>		    
+	      	<li><b>[<font color="red">2020.10</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>		      
               </ul>
             </td>
           </tr>
