--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <a href="https://github.com/liliangnudt/BGAE">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a novel "encoding-decoding" framework in graph machine learning settings.
+                We propose a novel "encoding-decoding" framework in graph machine learning settings, inspired by the popular auto-encoding design in deep learning.
               </p>
             </td>
           </tr>				
