--- a/index.html
+++ b/index.html
@@ -419,14 +419,15 @@
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
-            <li>National Scholarship, 2022.</li>
-            <li>First Prize of Postgraduate Academic Scholarship, 2021.</li>
-            <li>National Scholarship, 2020.</li>
-            <li>First Prize of Postgraduate Academic Scholarship, 2020.</li>		    
-            <li>Postgraduate Scientific Research Innovation Project of Hunan Province (CX20200008, CX20200084), 2020.</li>
-            <li>Second Prize of "HUAWEI" the 16th China Post-Graduate Mathematical Contest in Modeling, 2019.</li>		    
-            <li>Excellent Graduated Graduate Student, HUST, 2018. </li>
-            <li>Recommendation for admission to NUDT, 2018. </li>
+		<li>CSC Scholarship, 2023.</li>	    
+                <li>National Scholarship, 2022.</li>
+		<li>First Prize of Postgraduate Academic Scholarship, 2021.</li>
+		<li>National Scholarship, 2020.</li>
+		<li>First Prize of Postgraduate Academic Scholarship, 2020.</li>		    
+		<li>Postgraduate Scientific Research Innovation Project of Hunan Province (CX20200008, CX20200084), 2020.</li>
+		<li>Second Prize of "HUAWEI" the 16th China Post-Graduate Mathematical Contest in Modeling, 2019.</li>		    
+		<li>Excellent Graduated Graduate Student, HUST, 2018. </li>
+		<li>Recommendation for admission to NUDT, 2018. </li>
 	    </ul>
         </table>
 
