--- a/index.html
+++ b/index.html
@@ -229,11 +229,8 @@
               <p style="text-align:justify">
                We mathematically disassemble the noise within kernel partition into dual noise, 
 		      namely, Null space noise (N-noise) and Column space noise (C-noise), 
-		      and propose a parameter-free model termed MKCDNM, 
-		      to minimize the dual noise. To our best knowledge, 
-		      it is the first time to investigate dual noise within the partition in the kernel space. 
-		      We observe that dual noise will pollute the block diagonal structures and incur the degeneration of clustering performance, 
-		      and C-noise exhibits stronger destruction than N-noise.
+		      and propose an elegant method to minimize them. It is the first time to investigate dual noise in the kernel space. 
+		      We observe that dual noise will pollute the block diagonal structures. An interesting finding is that C-noise exhibits stronger destruction than N-noise.
               </p>
             </td>
           </tr>
