--- a/index.html
+++ b/index.html
@@ -196,7 +196,12 @@
               <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We investigate the "anchor shift" issue incurred by noisy features in bipartite graph clustering and propose a novel strategy to measure the sparsity of bipartite graph theoretically.
+		One crucial finding is that the existence of noisy features will incur "anchor shift", 
+		which deviates from the centroids and degrades performance.
+		We propose a novel noisy feature filter mechanism to remedy the anchor shift issue, 
+		and we theoretically analyze the bounds of the bipartite graph’s fuzzy membership. 
+		An interesting finding is that reweighting features will increase the fuzzy membership to achieve soft partitions
+		against the potential inaccurate absolute relationships.
               </p>
             </td>
           </tr>
