--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
               <p></p>
               <p style="text-align:justify">
 		One crucial finding is that the existence of noisy features will incur "anchor shift", 
-		which deviates from the centroids and degrades performance.
-		We propose a novel noisy feature filter mechanism to remedy the anchor shift issue, 
-		and we theoretically analyze the bounds of the bipartite graph’s fuzzy membership. 
-		An interesting finding is that reweighting features will increase the fuzzy membership to achieve soft partitions
+		which deviates from the potential centroids.
+		We propose a novel noisy feature filter mechanism to remedy the anchor shift, 
+		and we theoretically analyze the bounds of the bipartite graph's sparsity. 
+		We find that reweighting features can increase the fuzzy membership to achieve soft partitions
 		against the potential inaccurate absolute relationships.
               </p>
             </td>
