--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
               <a href="https://github.com/liliangnudt/BGAE">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a novel "encoding-decoding" framework in graph machine learning settings, inspired by the popular auto-encoding design in deep learning.
+		We rethink existing MVBGC paradigms and find that a common design is to construct the bipartite graph directly from the input data, 
+		i.e. only consider the unidirectional "encoding" process. Inspired by the popular "encoding-decoding" design in deep learning, 
+		we transfer it into graph machine learning and propose a novel BGAE model, which integrates representation learning, 
+		bipartite graph learning, reconstruction learning, and label inference into a unified framework.
               </p>
             </td>
           </tr>				
