--- a/index.html
+++ b/index.html
@@ -166,10 +166,9 @@
               <a href="https://github.com/liliangnudt/BGAE">Code</a>
               <p></p>
               <p style="text-align:justify">
-		We rethink existing MVBGC paradigms and find that a common design is to construct the bipartite graph directly from the input data, 
+		We rethink existing paradigms and find that a common design is to construct the bipartite graph directly from the input data, 
 		i.e. only consider the unidirectional "encoding" process. Inspired by the popular "encoding-decoding" design in deep learning, 
-		we transfer it into graph machine learning and propose a novel BGAE model, which integrates representation learning, 
-		bipartite graph learning, reconstruction learning, and label inference into a unified framework.
+		we transfer it into graph machine learning and propose a novel model.
               </p>
             </td>
           </tr>				
@@ -236,9 +235,8 @@
               <p></p>
               <p style="text-align:justify">
                We mathematically disassemble the noise within kernel partition into dual noise, 
-		      namely, Null space noise (N-noise) and Column space noise (C-noise), 
-		      and propose an elegant method to minimize them. It is the first time to investigate dual noise in the kernel space. 
-		      We observe that dual noise will pollute the block diagonal structures. An interesting finding is that C-noise exhibits stronger destruction than N-noise.
+		namely, Null space noise (N-noise) and Column space noise (C-noise), 
+		and propose an elegant method to minimize them. We observe that dual noise will pollute the block diagonal structures. An interesting finding is that C-noise exhibits stronger destruction than N-noise.
               </p>
             </td>
           </tr>
