--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <a href="https://github.com/liliangnudt/Jet-BGC">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a novel denoising multi-view bipartite graph clustering.
+                We propose an elegant denoising multi-view bipartite graph clustering.
               </p>
             </td>
           </tr>		
