--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2024
               <br>
-              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              <a href="images/BGAE_TKDE.pdf">Paper</a>
               /
               <a href="https://github.com/liliangnudt/BGAE">Code</a>
               <p></p>
