--- a/index.html
+++ b/index.html
@@ -129,9 +129,11 @@
               <br>
               <em>Preprint </em>, 2023
               <br>
-              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/10109823">[IEEE Xplore]</a>
               /
-              <a href="https://github.com/liliangnudt/Jet-BGC">Code</a>
+              <a href="images/BGAE_TKDE.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/liliangnudt/Jet-BGC">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                 We propose a novel Jet-BGC model that integrating embedding learning and Structural Fusion.
@@ -161,9 +163,11 @@
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2024
               <br>
-              <a href="images/BGAE_TKDE.pdf">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/10423800">[IEEE Xplore]</a>
               /
-              <a href="https://github.com/liliangnudt/BGAE">Code</a>
+              <a href="images/BGAE_TKDE.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/liliangnudt/BGAE">[Code]</a>
               <p></p>
               <p style="text-align:justify">
 		We rethink existing paradigms and find that a common design is to construct the bipartite graph directly from the input data, 
@@ -193,9 +197,11 @@
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2023
               <br>
-              <a href="images/2023-TKDE.pdf">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/10109823">[IEEE Xplore]</a>
               /
-              <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
+              <a href="images/2023-TKDE.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/liliangnudt/MVBGC-NFF">[Code]</a>
               <p></p>
               <p style="text-align:justify">
 		One crucial finding is that the existence of noisy features will incur "anchor shift", 
@@ -227,9 +233,11 @@
               <br>
               <em>ACM MM (<font color="red">CCF-A</font>)</em>, 2022
               <br>
-              <a href="images/2022-ACMMM.pdf">Paper</a>
+              <a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548334">[Link]</a>
               /
-              <a href="https://github.com/liliangnudt/MKCDNM">Code</a>
+              <a href="images/2022-ACMMM.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/liliangnudt/MKCDNM">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                We mathematically disassemble the noise within kernel partition into dual noise, 
@@ -261,9 +269,11 @@
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>)</em>, 2022
               <br>
-              <a href="images/2022-TNNLS.pdf">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/9830658">[IEEE Xplore]</a>
               /
-              <a href="https://github.com/liliangnudt/LSWMKC">Code</a>
+              <a href="images/2022-TNNLS.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/liliangnudt/LSWMKC">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                 We investigate an important issue that how to localize the kernel matrix in multi-kernel clustering. Compared to the traditional KNN manner that neglects the ranking relationship of neighbors, this paper proposes a novel localized MKC algorithm coupled flexible graph learning, termd LSWMKC, which achieves fully exploring the latent local manifold.
@@ -288,9 +298,11 @@
               <br>
               <em>Preprint </em>, 2023
               <br>
-              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/9830658">[IEEE Xplore]</a>
               /
-              <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
+              <a href="https://ieeexplore.ieee.org/document/10109823">[pdf]</a>
+              /
+              <a href="https://github.com/liliangnudt/MVBGC-NFF">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                 We propose an elegant diverse kernel partition fusion method to get the optimal partition.
@@ -321,9 +333,11 @@
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>)</em>, 2023
               <br>
-              <a href="images/2023-Liuyue-TNNLS.pdf">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/10163985">[IEEE Xplore]</a>
               /
-              <a href="https://github.com/yueliu1999/SCGC">Code</a>
+              <a href="images/2023-Liuyue-TNNLS.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/yueliu1999/SCGC">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                   We propose to replace the complicated and consuming graph data augmentations by designing the parameter un-shared siamese encoders and perurbing the node embeddings.
@@ -356,9 +370,11 @@
               <br>
               <em>AAAI (<font color="red">CCF-A, Oral presentation</font>)</em>, 2023
               <br>
-              <a href="images/2022-liuyue-AAAI.pdf">Paper</a>
+              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26071">[Link]</a>
               /
-              <a href="https://github.com/yueliu1999/HSAN">Code</a>
+              <a href="images/2022-liuyue-AAAI.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/yueliu1999/HSAN">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                 We propose Hard Sample Aware Network (HSAN) to mine both the hard positive samples and hard negative samples with a comprehensive similarity measure criterion and a general dynamic sample weighing strategy.
@@ -389,9 +405,11 @@
               <br>
               <em>AAAI (<font color="red">CCF-A</font>)</em>, 2023
               <br>
-              <a href="images/2022-Zhangpei-AAAI.pdf">Paper</a>
+              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26333">[Link]</a>
               /
-              <a href="https://github.com/yueliu1999/HSAN">Code</a>
+              <a href="images/2022-Zhangpei-AAAI.pdf">[pdf]</a>
+              /
+              <a href="https://github.com/yueliu1999/HSAN">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                 We propose to fuse diverse bipartite graphs across multiple views that can avoid tune the anchor number manually.
