--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>Deno-BGC: Denoising Multi-view Bipartite Graph Clustering</papertitle>
+                <papertitle>GDNO: Generalized Denoising Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
