--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>GDNO: Generalized Denoising Multi-view Bipartite Graph Clustering</papertitle>
+                <papertitle>G-DNO: Generalized Denoising Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
@@ -105,7 +105,7 @@
               <a href="https://github.com/liliangnudt/Jet-BGC">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose an elegant denoising multi-view bipartite graph clustering.
+                We propose a generalized and elegant denoising framework for multi-view bipartite graph clustering.
               </p>
             </td>
           </tr>		
