--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/LiangLi.jpg"><img style="width:66%;max-width:66%" alt="profile photo" src="images/LiangLi.jpg" class="hoverZoomLink"></a>
+              <a href="images/Bali_LL.jpg"><img style="width:66%;max-width:66%" alt="profile photo" src="images/Bali_LL.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
