--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <br>
               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
               /
-              <a href="https://github.com/liliangnudt/Jet-BGC">Code</a>
+              <a href="https://github.com/liliangnudt/G-DNO">Code</a>
               <p></p>
               <p style="text-align:justify">
                 We propose a generalized and elegant denoising framework for multi-view bipartite graph clustering.
