--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <p style="text-align:justify">Li Liang(李亮) is a Ph.D. student at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China since 2021. 
                 He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a>. 
 		Before that, he received the Master degree from NUDT in 2020, and got the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
-		His research interests include machine learning, bioinformatics, and self-supervised learning. Any discussions or concerns are welcomed! [E-mail:liliang1037@gmail.com/Wechat:LiLiang_NUDT/WhatsApp:6580679302/Skype:liliang1037@gmail.com]
+		His research interests include machine learning, bioinformatics, and self-supervised learning. Any discussions or concerns are welcomed! [E-mail:liliang1037@gmail.com]
               </p>
 
               <p style="text-align:center">
