--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a>. 
 		Before that, he received the Master degree from NUDT in 2020, and got the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, bioinformatics, and self-supervised learning. 
-		Any discussions or concerns are welcomed! Please contact e-mail:liliang1037@gmail.com
+		Any discussions or concerns are welcomed! Please contact via e-mail:liliang1037@gmail.com
               </p>
 
               <p style="text-align:center">
