--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>G-DNO: Generalized Denoising Multi-view Bipartite Graph Clustering</papertitle>
+                <papertitle>GAID: Generalized ab Initio Denoising for Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
@@ -298,7 +298,7 @@
 	      <strong>Liang Li(Co-first author)</strong>,
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>
               <br>
-              <em>Preprint </em>, 2023
+              <em>Minor Revision </em>, 2023
               <br>
               <a href="https://ieeexplore.ieee.org/document/9830658">[IEEE Xplore]</a>
               /
