--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>GAID: Generalized ab Initio Denoising for Multi-view Bipartite Graph Clustering</papertitle>
+                <papertitle>GAIR: Generalized ab Initio Refining for Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
