--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
-            <li>Reviewer for TPAMI, TKDE, TNNLS, ACM TOMM, Neurocomputing</li>
+            <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, ACM TOMM, Neurocomputing</li>
             <li>Reviewer for ACM MM24/23, AAAI24/23, PRCV22</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
