--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+		<li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>		      
 		<li><b>[<font color="red">2024.03</font>]</b> I serve as a reviewer for <em>IEEE TPAMI<em>.</li>		      
 		<li><b>[<font color="red">2024.01</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
 		<li><b>[<font color="red">2023.09</font>]</b> I am visiting A*STAR for 18 months.</li>
@@ -462,7 +463,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
             <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, TBD, ACM TOMM, Neurocomputing</li>
-            <li>Reviewer for ACM MM24/23, AAAI24/23, PRCV22</li>
+            <li>Reviewer for NeurIPS24, ACM MM24/23, AAAI24/23, PRCV22</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
         </table>
