--- a/index.html
+++ b/index.html
@@ -96,9 +96,14 @@
               </a>
               <br>
               <strong>Liang Li</strong>,
+	      <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
+              <a href="https://junpuzhang.github.io/">Junpu Zhang</a>,
+              <a href="https://wangsiwei2010.github.io/">Siwei Wang</a>,
+              <a href="https://jeaninezpp.github.io/">Pei Zhang</a>,
               <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
+  	      <a href="https://profiles.uts.edu.au/ivor.tsang">Ivor W. Tsang</a>,    
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
               <em>Preprint </em>, 2024
