--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <a href="https://jeaninezpp.github.io/">Pei Zhang</a>,
               <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
-  	      <a href="https://profiles.uts.edu.au/ivor.tsang">Ivor W. Tsang</a>,    
+  	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>,    
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
               <em>Preprint </em>, 2024
@@ -194,7 +194,7 @@
 		    <a href="yueliu1999.github.io/">Yue Liu</a>,
 		    <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
 		    <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
-		    <a href="https://profiles.uts.edu.au/ivor.tsang">Ivor W. Tsang</a>,
+		    <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>,
 		    <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2024
