--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <strong>Liang Li</strong>,
 		    <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,
 		    <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,
-		    <a href="yueliu1999.github.io/">Yue Liu</a>,
+		    <a href="https://yueliu1999.github.io/">Yue Liu</a>,
 		    <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
 		    <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
 		    <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>,
@@ -263,7 +263,7 @@
               <strong>Liang Li (Co-first author)</strong>,		    
               <a href="https://wangsiwei2010.github.io/">Siwei Wang</a>,
               <a href="https://liujiyuan13.github.io/">Jiyuan Liu</a>,
-              <a href="yueliu1999.github.io/">Yue Liu</a>,
+              <a href="https://yueliu1999.github.io/">Yue Liu</a>,
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
               <a href="https://www.researchgate.net/profile/En-Zhu">En Zhu</a>,		        
               <br>
@@ -357,7 +357,7 @@
                 <papertitle>Simple Contrastive Graph Clustering</papertitle>
               </a>
               <br>
-                <a href="yueliu1999.github.io/">Yue Liu</a>,
+                <a href="https://yueliu1999.github.io/">Yue Liu</a>,
                 <a href="https://xihongyang1999.github.io/">Xihong Yang</a>,
                 <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">Sihang Zhou</a>,
                 <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
@@ -393,7 +393,7 @@
                 <papertitle>Hard Sample Aware Network for Contrastive Deep Graph Clustering</papertitle>
               </a>
               <br>
-              <a href="yueliu1999.github.io/">Yue Liu</a>,
+              <a href="https://yueliu1999.github.io/">Yue Liu</a>,
               <a href="https://xihongyang1999.github.io/">Xihong Yang</a>,
               <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">Sihang Zhou</a>,
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
