--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <a href="https://github.com/liliangnudt/G-DNO">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a generalized ab initio refining framework for multi-view bipartite graph clustering.
+                We provide a novel perspective for explaining variable dependence in multi-view clustering by using probabilistic graphical models. We design a generalized ab initio representation refining framework, which is compatible with a variety of distribution assumptions, enabling flexible conversion into a data-driven refining mechanism.
               </p>
             </td>
           </tr>		
