--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/JetBGC.PNG' width="160">
+                <img src='images/GAIR.PNG' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
