--- a/index.html
+++ b/index.html
@@ -345,6 +345,40 @@
               </p>
             </td>
           </tr>
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+<!--------------------------------------------------------------------------------------------------------------------------->
+            <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/IDCRN.png' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2202.12533">
+                <papertitle>Improved Dual Correlation Reduction Network</papertitle>
+              </a>
+              <br>
+                <a href="https://yueliu1999.github.io/">Yue Liu</a>,
+		<a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">Sihang Zhou</a>,
+		<a href="https://xihongyang1999.github.io/">Xihong Yang</a>,
+                <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+		<a href="https://wxtu.github.io/">Wenxuan Tu</a>,
+		<strong>Liang Li</strong>,
+		<a href="http://www.jilsa.net/xinxu.html">Xin Xu</a>,
+		<a href="https://scholar.google.com/citations?user=DbviELoAAAAJ&hl=en">Fuchun Sun</a>,
+
+              <br>
+              <em>IEEE T-NNLS</em>, 2024
+              <br>
+              <a href="https://arxiv.org/pdf/2202.12533">Paper</a>
+              /
+              <a href="https://github.com/yueliu1999/IDCRN">Code</a>
+              <p></p>
+              <p style="text-align:justify">
+                  We explore deep-in reasons of representation collapse in deep graph clustering and improve the dual correlation reduction network with the affinity recovery strategy.
+	      </p>
+            </td>
+          </tr>
 <!--------------------------------------------------------------------------------------------------------------------------->
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
