--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
-		<li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>		      
+		<li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>	      
 		<li><b>[<font color="red">2024.03</font>]</b> I serve as a reviewer for <em>IEEE TPAMI<em>.</li>		      
 		<li><b>[<font color="red">2024.01</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
 		<li><b>[<font color="red">2023.09</font>]</b> I am visiting A*STAR for 18 months.</li>
@@ -368,7 +368,7 @@
 		<a href="https://scholar.google.com/citations?user=DbviELoAAAAJ&hl=en">Fuchun Sun</a>,
 
               <br>
-              <em>IEEE T-NNLS</em>, 2024
+              <em>IEEE T-NNLS(<font color="red">CCF-B, IF: 10.4</font>)</em>, 2024
               <br>
               <a href="https://arxiv.org/pdf/2202.12533">Paper</a>
               /
